# zuspec-ir-core

./: ivpm.yaml  pyproject.toml
src/zuspec/ir/core/: __init__.py  activity.py  base.py  connection.py  context.py  coverage.py  data_type.py  domain_node.py  expr.py  expr_phase2.py  fields.py  json_converter.py  pipeline.py  pipeline_async.py  pipeline_async_pass.py  profile_rgy.py  provenance.py  stmt.py  visitor.py
tests/: test_activity_ir.py  test_coverage_ir.py  test_fields.py
